backends: Use fallback rotation if native DRM plane rotation failed

Blacklist the HW mode so we fallback gracefully to our own paths.

https://bugzilla.gnome.org/show_bug.cgi?id=772512